<resources>
    <string name="app_name">Sign Language</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="min_treshold">Min threshold </string>
    <string name="max_treshold">Max threshold </string>
    <string name="my_zero">0</string>

    <string name="action_save">Save Picture</string>
    <string name="hello_world">Hello world!</string>
    <string name="data_collection">Data Collection</string>
    <string name="train">Train</string>
    <string name="test">Test</string>
    <string name="AddGesture">Add\n Gesture</string>
    <string name="chooser_title">Select a gesture</string>
    <string name="map_apps">Map Apps</string>
    <string name="title_activity_display_app_list">DisplayAppList</string>
    <string name="action_settings">Settings</string>
    <string name="app_test">App Test</string>

    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="menu_next_camera">Next Cam</string>
    <string name="menu_take_photo">Take Photo</string>
    <string name="menu_image_size">Size</string>
    <string name="photo_delete_prompt_message">This photo is saved in your Gallery. Do you want to delete it?</string>
    <string name="photo_delete_prompt_title">Delete photo?</string>
    <string name="photo_error_message">Failed to save photo</string>
    <string name="photo_edit_chooser_title">Edit photo with&#8230;</string>
    <string name="photo_send_chooser_title">Share photo with&#8230;</string>
    <string name="photo_send_extra_subject">My photo from Second Sight</string>
    <string name="photo_send_extra_text">Check out my photo from the Second Sight app! http://nummist.com/opencv/</string>
    <string name="share">Share</string>
</resources>
