<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_save"/>

    <item
        android:id="@+id/data_collection"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/data_collection"/>
    
    <item
        android:id="@+id/map_apps"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/map_apps"/>
    
    <item
        android:id="@+id/app_test"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/app_test"/>

    <item
        android:id="@+id/menu_take_photo"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_take_photo" />
    
</menu>
